--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
+include(CTest)
+enable_testing()
 
 Include(FetchContent)
-
 FetchContent_Declare(
   Catch2
   GIT_REPOSITORY https://github.com/catchorg/Catch2.git
@@ -9,13 +10,14 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(Catch2)
 
-add_executable(test-linesearch test-linesearch.cpp)
-target_link_libraries(test-linesearch PRIVATE ${CMAKE_DL_LIBS} stlbfgs Catch2::Catch2)
+FILE(GLOB SRCTEST *.cpp)
 
-add_executable(test-stlbfgs test-stlbfgs.cpp)
-target_link_libraries(test-stlbfgs PRIVATE ${CMAKE_DL_LIBS} stlbfgs Catch2::Catch2)
+add_executable(test-all ${SRCTEST})
 
-add_executable(test-untangle test-untangle.cpp)
-target_link_libraries(test-untangle PRIVATE ${CMAKE_DL_LIBS} stlbfgs Catch2::Catch2)
+target_link_libraries(test-all PRIVATE ${CMAKE_DL_LIBS} stlbfgs Catch2::Catch2)
 
+FetchContent_GetProperties(Catch2)
+list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/contrib)
+include(Catch)
 
+catch_discover_tests(test-all)
