--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ endif()
 set_target_properties(stlbfgs PROPERTIES SOVERSION 1.0)
 
 
-option(UNIT_TESTS "UNIT_TESTS" ON)
+option(UNIT_TESTS "UNIT_TESTS" OFF)
 if (UNIT_TESTS)
     add_subdirectory(tests)
 endif()
