--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,8 +40,8 @@ endif()
 set_target_properties(stlbfgs PROPERTIES SOVERSION 1.0)
 
 
-option(UNIT_TESTS "UNIT_TESTS" OFF)
-if (UNIT_TESTS)
+option(STLBFGS_UNIT_TESTS "UNIT_TESTS" OFF)
+if (STLBFGS_UNIT_TESTS)
     add_subdirectory(tests)
 endif()
 
