--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,9 +12,9 @@ FetchContent_MakeAvailable(Catch2)
 
 FILE(GLOB SRCTEST *.cpp)
 
-add_executable(test-all ${SRCTEST})
+add_executable(test-stlbfgs-all ${SRCTEST})
 
-target_link_libraries(test-all PRIVATE ${CMAKE_DL_LIBS} stlbfgs Catch2::Catch2)
+target_link_libraries(test-stlbfgs-all PRIVATE ${CMAKE_DL_LIBS} stlbfgs Catch2::Catch2)
 
 FetchContent_GetProperties(Catch2)
 list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/contrib)
