--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest] #removed ", macos-latest" because wasn't starting ?
+        os: [ubuntu-latest, macos-latest, windows-latest]
         config: [Release, Debug, RelWithDebInfo]
         include:
           - os: macos-latest
