WIP new cmake for inclusion in ligen-pre

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,7 @@
 cmake_minimum_required(VERSION 3.19)
 project(stlbfgs LANGUAGES C CXX)
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(SOURCES linesearch.cpp stlbfgs.cpp linesearch.h stlbfgs.h)
+add_library(stlbfgs)
 
 find_package(OpenMP)
 if(OPENMP_FOUND)
@@ -12,11 +10,26 @@ if(OPENMP_FOUND)
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 
-add_library(stlbfgs 
-  ${SOURCES} ${HEADERS})
-target_include_directories(stlbfgs PUBLIC 
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include)
-
 if(OpenMP_CXX_FOUND)
     target_link_libraries(stlbfgs OpenMP::OpenMP_CXX)
 endif()
+
+set(source_files 
+ "${CMAKE_CURRENT_SOURCE_DIR}/linesearch.cpp"
+ "${CMAKE_CURRENT_SOURCE_DIR}/stlbfgs.cpp")
+
+set(header_files
+  "${CMAKE_CURRENT_SOURCE_DIR}/linesearch.h"
+  "${CMAKE_CURRENT_SOURCE_DIR}/stlbfgs.h")
+
+target_sources(stlbfgs PRIVATE ${source_files})
+  
+target_include_directories(stlbfgs INTERFACE 
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include)
+  
+set_target_properties(stlbfgs
+  PROPERTIES
+  CXX_STANDARD 17
+  CXX_STANDARD_REQUIRED ON
+  CXX_EXTENSIONS OFF)
+  
